create test Y_loop_real. THIS WORKS!! FOR REAL SYSTEM

--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -370,11 +370,14 @@
     "\n",
     "\n",
     "dt = 0.01\n",
-    "t_end = 10\n",
+    "t_end = 5\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "th = th_start\n",
     "th_d = th_d_start\n",
+    "\n",
+    "beta_threshold = 0.01\n",
+    "alpha_treshold = 100\n",
     "\n",
     "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
@@ -405,11 +408,16 @@
     "\tY = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
     "\talpha_true, beta_true = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
     "\n",
-    "\talpha = torch.clamp(alpha_true, min = -alpha_des, max = alpha_des)\n",
-    "\tbeta = beta_true.sign() * torch.clamp(beta_true.abs(), min = beta_des)\n",
-    "\talpha, beta = alpha_des, beta_des\n",
-    "\talpha = alpha_true\n",
-    "\tbeta = beta_true\n",
+    "\t\"\"\"\n",
+    "\talpha = torch.clamp(alpha_true, min = -alpha_treshold, max = alpha_treshold)\n",
+    "\tif beta_true > 0 and beta_true < beta_threshold:\n",
+    "\t\tbeta = beta_threshold\n",
+    "\telif beta_true < 0 and beta_true > -beta_threshold:\n",
+    "\t\tbeta = -beta_threshold\n",
+    "\telse:\n",
+    "\t\tbeta = beta_true\n",
+    "\t\"\"\"\n",
+    "\talpha, beta = alpha_true, beta_true\n",
     "\n",
     "\tv = normal_form.calculate_v(Y, Y_des, K)\n",
     "\tu = normal_form.calculate_u(alpha, beta, v)\n",
@@ -504,7 +512,7 @@
     "\n",
     "\n",
     "dt = 0.01\n",
-    "t_end = 10\n",
+    "t_end = 5\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "q_real = q_start\n",
@@ -636,7 +644,7 @@
     "xy_real_series = torch.empty((0,2)).to(device)\n",
     "#xy_est_series = torch.empty((0,2)).to(device)\n",
     "\n",
-    "for q_real in zip(q_series_qsim):\n",
+    "for q_real in q_series_qsim:\n",
     "\txy_real, _ = transforms.forward_kinematics(rp, q_real)\n",
     "\txy_real_series = torch.cat((xy_real_series, xy_real.unsqueeze(0)))"
    ]
@@ -653,17 +661,14 @@
     "\n",
     "neural_net = False\n",
     "model_location = None\n",
-    "\n",
+    "print(K)\n",
     "metadata = {\n",
     "\t\"timestamp\": timestamp,\n",
     "\t\"Learned transform\": neural_net,\n",
     "\t\"Model location\": model_location,\n",
     "\t\"Model clockwise\": model_cw,\n",
     "\t\"Model shifting\": model_shifting, \n",
-    "\t\"normal_form gains\": [[K[0]],\n",
-    "\t\t\t\t\t   \t  [K[1]],\n",
-    "\t\t\t\t\t\t  [K[2]],\n",
-    "\t\t\t\t\t\t  [K[3]]],\n",
+    "\t\"normal_form gains\": [K[0, 0].item(),K[0, 1].item(),K[0, 2].item(),K[0, 3].item()],\n",
     "\t\"Actuator location\": {\"x_a\": rp[\"xa\"], \"y_a\": rp[\"ya\"]},\n",
     "\t\"xy start\": {\"x\": xy_start[0].item(), \"y\": xy_start[1].item()},\n",
     "\t\"Time step\": dt,\n",
@@ -681,8 +686,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stride = 1\n",
-    "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_real_series[::stride])\n",
+    "stride = 3\n",
+    "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_series_qsim[::stride])\n",
     "#pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series[::stride])\n",
     "\n",
     "frames_q_real = plotter.frame_pendulum(pos_end_q_real, pos_elbow_q_real)\n",
@@ -696,6 +701,7 @@
     "\t\"act_color\": \"tab:cyan\"\n",
     "}\n",
     "\n",
+    "\"\"\"\n",
     "data_est = {\n",
     "\t\"frames\": frames_q_est,\n",
     "\t\"times\": dt,\n",
@@ -703,15 +709,6 @@
     "\t\"arm_color\": \"tab:orange\", \n",
     "\t\"act_color\": \"tab:red\"\n",
     "} \n",
-    "\n",
-    "\"\"\"\n",
-    "data_naive = {\n",
-    "\t\"frames\": frames_q_naive,\n",
-    "\t\"times\": dt,\n",
-    "\t\"name\": \"q_naive\",\n",
-    "\t\"arm_color\": \"tab:green\", \n",
-    "\t\"act_color\": \"tab:olive\"\n",
-    "}\n",
     "\"\"\"\n",
     "\n",
     "ref_pos_real = {\n",
@@ -720,25 +717,17 @@
     "\t\"color\": \"tab:blue\"\n",
     "}\n",
     "\n",
+    "\"\"\"\n",
     "ref_pos_est = {\n",
     "\t\"pos\": xy_des_est,\n",
     "\t\"name\": \"est\",\n",
     "\t\"color\": \"tab:orange\"\n",
     "}\n",
-    "\n",
-    "\"\"\"\n",
-    "ref_pos_naive = {\n",
-    "\t\"pos\": xy_des_real,\n",
-    "\t\"name\": \"naive\",\n",
-    "\t\"color\": \"tab:green\"\n",
-    "}\n",
     "\"\"\"\n",
     "\n",
     "ref_poss = [ref_pos_real]#, ref_pos_est]#, ref_pos_naive]\n",
     "\n",
-    "frames_data = [data_real, data_est]#, data_naive]\n",
-    "#frames_data = [data_est]\n",
-    "#frames_data = [data_real]\n",
+    "frames_data = [data_real]#, data_est]\n",
     "\n",
     "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
     "name_ref = \"ref:(\" + str(xy_des_real[0].item()) + \",\" + str(xy_des_real[1].item()) + \")_\"\n",
@@ -764,6 +753,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets_q = [\n",
+    "\t#{\n",
+    "\t#    \"name\": \"est\",\n",
+    "\t#    \"values\": q_est_series.cpu().detach().numpy(),\n",
+    "\t#    \"color\": \"tab:orange\"\n",
+    "\t#},\n",
+    "\t{\n",
+    "\t\t\"name\": \"real\",\n",
+    "\t\t\"values\": q_series_qsim.cpu().detach().numpy(),\n",
+    "\t\t\"color\": \"tab:blue\"\n",
+    "\t}#,\n",
+    "\t#{\n",
+    "\t#    \"name\": \"naive\",\n",
+    "\t#    \"values\": q_naive_series.cpu().detach().numpy(),\n",
+    "\t#    \"color\": \"tab:green\"\n",
+    "\t#}\n",
+    "]\n",
+    "\n",
+    "datasets_th = [\n",
+    "\t#{\n",
+    "\t#\t\"name\": \"est\",\n",
+    "\t#\t\"values\": th_series_qsim.cpu().detach().numpy(),\n",
+    "\t#\t\"color\": \"tab:orange\"\n",
+    "\t#},\n",
+    "\t{\n",
+    "\t    \"name\": \"ana\",\n",
+    "\t    \"values\": th_series_qsim.cpu().detach().numpy(),\n",
+    "\t    \"color\": \"tab:blue\"\n",
+    "\t}\n",
+    "]\n",
+    "\n",
+    "\n",
+    "datasets_xy = [\n",
+    "\t#{\n",
+    "\t#    \"name\": \"est\",\n",
+    "\t#    \"values\": xy_est_series.cpu().detach().numpy(),\n",
+    "\t#    \"color\": \"tab:orange\"\n",
+    "\t#},\n",
+    "\t{\n",
+    "\t\t\"name\": \"real\",\n",
+    "\t\t\"values\": xy_real_series.cpu().detach().numpy(),\n",
+    "\t\t\"color\": \"tab:blue\"\n",
+    "\t}#,\n",
+    "\t#{\n",
+    "\t#    \"name\": \"naive\",\n",
+    "\t#    \"values\": xy_naive_series.cpu().detach().numpy(),\n",
+    "\t#    \"color\": \"tab:green\"\n",
+    "\t#}\n",
+    "]\n",
+    "\n",
+    "# Common labels for the plots.\n",
+    "name_q = \"q trajectory\"\n",
+    "name_th = \"th trajectory\"\n",
+    "name_xy = \"xy trajectory\"\n",
+    "t_series = torch.arange(0, t_end, dt)\n",
+    "\n",
+    "# Create an instance of ErrorPlotter.\n",
+    "ep = pendulum_plot.Error_plotter(rp)\n",
+    "\n",
+    "# Prepare plot datasets for each column.\n",
+    "# Each call groups a set of datasets to be drawn in one subplot column.\n",
+    "column1 = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=q_des, name=name_q)\n",
+    "column2 = ep.create_plot_dataset(t=t_series, datasets=datasets_th, reference=th_des, name=name_th)\n",
+    "column3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des_real.unsqueeze(0), name=name_xy)\n",
+    "plot_datasets = [column1, column2, column3]\n",
+    "\n",
+    "file_name = \"Error plot.png\"\n",
+    "file_counter = 0\n",
+    "\n",
+    "output_path = os.path.join(save_dir, file_name)\n",
+    "\n",
+    "# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
+    "ep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [\"q\", \"th\", \"xy\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -783,7 +853,7 @@
     "\n",
     "Y = normal_form.calculate_Y(th_start, th_d_start, M_th_start, G_th_start, device)\n",
     "#print(Y)\n",
-    "t_end = 10.\n",
+    "t_end = 5.\n",
     "dt = 0.01\n",
     "\n",
     "Y_A = torch.tensor([[0., 1., 0., 0.],\n",
@@ -889,6 +959,11 @@
     "{\"type\": \"double\", \"data\": betas_q_plot[:1000], \"dt\": dt, \"ylabel\": \"beta_qsim\", \"title\": \"beta_qsim vs time\", \"ylim\": None, \"log\": False}\n",
     "]\n",
     "\n",
+    "u_real_config = [\n",
+    "{\"type\": \"single\", \"data\": u_series_qsim[:1000], \"dt\": dt, \"ylabel\": \"u_thsim\", \"title\": \"u_thsim vs time\", \"ylim\": None, \"log\": False},\n",
+    "{\"type\": \"single\", \"data\": u_series_thsim[:1000], \"dt\": dt, \"ylabel\": \"u_qsim\", \"title\": \"u_qsim vs time\", \"ylim\": None, \"log\": False}\n",
+    "]\n",
+    "\n",
     "\n",
     "print(alphas_th_plot.size())\n",
     "plot_side_by_side(Y_0sim_config)\n",
@@ -896,7 +971,8 @@
     "plot_side_by_side(v_sim_config)\n",
     "plot_side_by_side(th_thsim_config)\n",
     "plot_side_by_side(alpha_real_config)\n",
-    "plot_side_by_side(beta_real_config)\n"
+    "plot_side_by_side(beta_real_config)\n",
+    "plot_side_by_side(u_real_config)"
    ]
   },
   {
