move legend locations

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -73,7 +73,7 @@
     "\tif log:\n",
     "\t\tax.set_yscale(\"log\")\n",
     "\tax.grid(True)\n",
-    "\tax.legend()\n",
+    "\tax.legend(loc=\"upper right\")\n",
     "\n",
     "\n",
     "def plot_double_vs_time(double_list, dt, ylabel, title, ylim=None, log=False, ax=None):\n",
@@ -92,7 +92,7 @@
     "\tif log:\n",
     "\t\tax.set_yscale(\"log\")\n",
     "\tax.grid(True)\n",
-    "\tax.legend()\n",
+    "\tax.legend(loc=\"upper right\")\n",
     "\n",
     "\n",
     "def plot_quad_vs_time(quad_list, dt, ylabel, title, ylim=None, log=False, ax=None):\n",
@@ -113,7 +113,7 @@
     "\tif log:\n",
     "\t\tax.set_yscale(\"log\")\n",
     "\tax.grid(True)\n",
-    "\tax.legend()\n"
+    "\tax.legend(loc=\"upper right\")\n"
    ]
   },
   {
