comment unnecessary lines

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -408,9 +408,9 @@
     "\tY = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
     "\talpha_true, beta_true = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
     "\n",
-    "\talpha = torch.clamp(alpha_true, min = -alpha_des, max = alpha_des)\n",
-    "\tbeta = beta_true.sign() * torch.clamp(beta_true.abs(), min = beta_des)\n",
-    "\talpha, beta = alpha_des, beta_des\n",
+    "\t#alpha = torch.clamp(alpha_true, min = -alpha_des, max = alpha_des)\n",
+    "\t#beta = beta_true.sign() * torch.clamp(beta_true.abs(), min = beta_des)\n",
+    "\t#alpha, beta = alpha_des, beta_des\n",
     "\talpha = alpha_true\n",
     "\tbeta = beta_true\n",
     "\n",
