add q1 margin for points selection

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mask_points(q0_split, clockwise = False):\n",
+    "def mask_points(q0_split, clockwise = False, q1_margin = 0.):\n",
     "\n",
     "\t\"\"\"\n",
     "\tReturns a set of [q0, q1] points based on \"q0_split\" limits on q0 and q1.\n",
@@ -82,11 +82,11 @@
     "\t\n",
     "\t# Mask to retrieve only the counterclockwise points\n",
     "\twidth_mask = (points[:,0] >= q0_split[0]) & (points[:,0] <= q0_split[1])\n",
-    "\tccw_mask = ((points[:,1] >= points[:,0]) & \n",
-    "\t\t\t\t  (points[:,1] <= points[:,0] + torch.pi))\n",
+    "\tccw_mask = ((points[:,1] >= points[:,0] + q1_margin) & \n",
+    "\t\t\t\t  (points[:,1] <= points[:,0] + torch.pi - q1_margin))\n",
     "\t\n",
     "\t# Mask to retrieve only the clockwise points\n",
-    "\tcw_mask = ((points[:,1] >= points[:,0] - torch.pi) & (points[:,1] <= points[:,0]))\n",
+    "\tcw_mask = ((points[:,1] >= points[:,0] - torch.pi + q1_margin) & (points[:,1] <= points[:,0] - q1_margin))\n",
     "\n",
     "\tif clockwise:\n",
     "\t\tfinal_mask = width_mask & cw_mask\n",
