add points plotter here, it's easier

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -105,6 +105,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bc02d15f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def points_plotter(points, extend = None, save = False, file_path = None):\n",
+    "\n",
+    "\t\"\"\" \n",
+    "\tSimple plotter function which visualizes the points used for training of the Autoencoder. \n",
+    "\t\"\"\"\n",
+    "\t \n",
+    "\tplt.figure(figsize=(6, 6))\n",
+    "\tplt.scatter(points[:, 0].cpu().detach().numpy(), points[:, 1].cpu().detach().numpy(), alpha=0.6, edgecolors='k', s=20)\n",
+    "\tplt.title('Scatter Plot of q0 vs q1')\n",
+    "\tplt.xlabel('q0')\n",
+    "\tplt.ylabel('q1')\n",
+    "\tplt.xlim(-2*torch.pi, 2*torch.pi)\n",
+    "\tplt.ylim(-2*torch.pi, 2*torch.pi)\n",
+    "\tplt.grid(True)\n",
+    "\t\n",
+    "\tif save:\n",
+    "\t\tplt.savefig(file_path, dpi=800)\n",
+    "\tplt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "858c8c69",
    "metadata": {},
    "outputs": [],
