take points with margin, plot here

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -136,10 +136,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masked_points = mask_points((-torch.pi, torch.pi), clockwise = train_clockwise)\n",
+    "masked_points = mask_points((-torch.pi, torch.pi), clockwise = train_clockwise, q1_margin = 0.2)\n",
     "deshifted_points = transforms.wrap_to_pi(masked_points.clone())\n",
-    "lp.points_plotter(masked_points, extend=\"ccw\")\n",
-    "lp.points_plotter(deshifted_points, extend=\"ccw\")"
+    "points_plotter(masked_points, extend=\"ccw\")\n",
+    "points_plotter(deshifted_points, extend=\"ccw\")"
    ]
   },
   {
