change loss function to respect q wrap around

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -226,8 +226,9 @@
     "\n",
     "\tlw = loss_weights\n",
     "\t\n",
+    "\tdelta = torch.atan2(torch.sin(q-q_hat), torch.cos(q-q_hat))\n",
+    "\tl_recon = F.mse_loss(delta, torch.zeros_like(delta), reduction=\"mean\")\n",
     "\n",
-    "\tl_recon = F.mse_loss(q, q_hat, reduction=\"mean\")\n",
     "\n",
     "\t# Calculate forward and inverse Jacobians\n",
     "\tJ_h = J_h_enc\n",
