update weights to optimal

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -536,16 +536,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w_recon        = 4.\n",
-    "w_J_eye \t   = 1.\n",
+    "w_recon        = 4.0\n",
+    "w_J_eye \t   = 1.0\n",
     "\n",
-    "w_diag         = 1. \n",
-    "w_off_diag     = 1. \n",
+    "w_diag         = 1.25\n",
+    "w_off_diag     = 1.25\n",
     "\n",
     "w_input        = 1.\n",
-    "w_input_jac    = 1.\n",
+    "w_input_jac    = 0.8\n",
     "w_theta        = 1.\n",
-    "#f_inertia_eye  = 0. \n",
     "\n",
     "loss_weights = {\n",
     "\t\"w_recon\": w_recon,\n",
