--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -581,9 +581,9 @@
     "\n",
     "current_time = datetime.now().strftime(\"%Y%m%d%H%M\")\n",
     "\n",
-    "shifted_points = mask_points(q0_split, clockwise=train_clockwise)\n",
-    "\n",
-    "dataset = make_dataset(shifted_points)\n",
+    "training_points = mask_points(q0_split, clockwise=train_clockwise, q1_margin = 0.2)\n",
+    "points_plotter(training_points)\n",
+    "dataset = make_dataset(training_points)\n",
     "(train_dataloader, val_dataloader) = make_dataloaders(dataset=dataset, batch_size=batch_size, train_part=train_part)\n",
     "outputs = []\n",
     "model, train_losses, val_losses, dir_path, nn_filepath, file_counter = train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, \n",
