--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -610,9 +610,8 @@
    "outputs": [],
    "source": [
     "points_path = os.path.join(dir_path, \"training_points_\" + str(file_counter) + \".png\")\n",
-    "lp.points_plotter(shifted_points, save = True, file_path = points_path)\n",
-    "loss_fig_path = os.path.join(dir_path, \"loss_\" + str(file_counter) + \".png\")\n",
-    "lp.plot_loss(train_losses, val_losses, log = True, file_path = loss_fig_path)"
+    "points_plotter(training_points, save = True, file_path = points_path)\n",
+    "lp.plot_loss(train_losses, val_losses, file_counter, log = True,  save_folder = dir_path)"
    ]
   },
   {
@@ -649,7 +648,7 @@
     "theta_figure_path = os.path.join(dir_path, \"theta_mapping_\" + str(file_counter) + \".png\")\n",
     "th_plotter.make_figure(theta_figure_path)\n",
     "theta_anim_path = os.path.join(dir_path, \"theta_mapping_\" + str(file_counter) + \".mp4\")\n",
-    "th_plotter.make_animation(theta_anim_path, duration = 4, fps = 20)"
+    "#th_plotter.make_animation(theta_anim_path, duration = 4, fps = 20)"
    ]
   },
   {
