calc model performance on q1 split

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -666,9 +666,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_model_performance(model):\n",
+    "def calc_model_performance(model, clockwise, q1_margin):\n",
     "\n",
-    "\ttest_points = mask_points(q0_split)\n",
+    "\ttest_points = mask_points(q0_split, clockwise = clockwise, q1_margin = q1_margin)\n",
     "\ttest_dataset = make_dataset(test_points)\n",
     "\ttest_dataloader = make_plot_dataloader(test_dataset, stride=10)\n",
     "\n",
