Update optimized weights (again hehexd)

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -717,7 +717,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "optimized_loss_weights = {\n",
+    "'w_recon': 4., \n",
+    "'w_J_eye': 1., \n",
+    "'w_diag': 1.25, \n",
+    "'w_off_diag': 1.25, \n",
+    "'w_input': 1., \n",
+    "'w_input_jac': 0.8, \n",
+    "'w_theta': 1.\n",
+    "}"
    ]
   },
   {
