--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -753,10 +753,10 @@
     "\n",
     "# Step 1: Load existing data if the file exists\n",
     "if os.path.exists(mse_file_path):\n",
-    "    with open(mse_file_path, \"r\") as f:\n",
-    "        mse_dict = json.load(f)\n",
+    "\twith open(mse_file_path, \"r\") as f:\n",
+    "\t\tmse_dict = json.load(f)\n",
     "else:\n",
-    "    mse_dict = {}\n",
+    "\tmse_dict = {}\n",
     "\n",
     "for i in range(len(loss_weights)):\n",
     "\tfor j in [0.25, 1., 4.]:\n",
