Don't popup, just sound

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -790,8 +790,8 @@
     "\t\twith open(mse_file_path, \"w\") as f:\n",
     "\t\t\tjson.dump(mse_dict, f, indent=4)\n",
     "\n",
-    "\t\tnotify()\n",
-    "        os.system('paplay /usr/share/sounds/freedesktop/stereo/complete.oga')\n",
+    "\t\t\n",
+    "\t\tos.system('paplay /usr/share/sounds/freedesktop/stereo/complete.oga')\n",
     "\t\t"
    ]
   },
