Calculator for optimal loss weights

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -796,6 +796,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8812eb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_file_path = \"Models/Weight_Comparisons/Model_losses.json\"\n",
+    "with open(mse_file_path, \"r\") as f:\n",
+    "\t\tmse_dict = json.load(f)\n",
+    "\n",
+    "print([*mse_dict.keys()][0])\n",
+    "\n",
+    "loss_weight_options = [0.25, 1., 4.]\n",
+    "optimal_losses = [None for i in range(len(loss_weights))]\n",
+    "print(optimal_losses)\n",
+    "\n",
+    "\n",
+    "for i, key in enumerate(optimized_loss_weights.keys()):\n",
+    "\n",
+    "\t\n",
+    "\n",
+    "\tprint(\"For loss weight \" + str(i) + \", the weight value with minimum loss is:\")\n",
+    "\tmse_total_min = 1000\n",
+    "\tweight_index = None\n",
+    "\tfor j in range(3):\n",
+    "\t\tmse_total = mse_dict[[*mse_dict.keys()][i*3 + j]][\"mse_total\"]\n",
+    "\t\tif mse_total < mse_total_min:\n",
+    "\t\t\tmse_total_min = mse_total\n",
+    "\t\t\tweight_index = j\n",
+    "\tprint(\"Weight =\", loss_weight_options[weight_index])\n",
+    "\tprint(\"With an mse_loss of:\", mse_total_min)\n",
+    "\toptimized_loss_weights[key] = loss_weight_options[weight_index]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09f46887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(optimized_loss_weights)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "30c74579",
    "metadata": {},
