Load good nn file if none is loaded

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -892,10 +892,11 @@
     "try:\n",
     "\tdir_name\n",
     "except NameError:\n",
-    "\tdir_name = \"NN_202505141642(half-q)\"\n",
+    "\tprint(\"NO NN FILE FOUND: RESORTING TO well-performing FILE\")\n",
+    "\tdir_name = \"NN_optimal\"\n",
     "\n",
     "\tdir_path = os.path.join(os.getcwd(), \"Models\", dir_name)\n",
-    "\tnn_filename = \"NN_202505141642\" + \"_0.pth\"\n",
+    "\tnn_filename = \"NN\" + \"_0.pth\"\n",
     "\tnn_filepath = os.path.join(dir_path, nn_filename)\n",
     "\n",
     "\tmodel_path = nn_filepath\n",
