--- a/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
@@ -25,10 +25,15 @@
     "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
     "\n",
     "import torch\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import autoencoders\n",
     "import learning_plotters as lp\n",
     "import Double_Pendulum.robot_parameters as robot_parameters\n",
+    "import Double_Pendulum.dynamics as dynamics\n",
+    "import training_data as training_data\n",
+    "\n",
+    "from torch.utils.data import TensorDataset, Dataset, DataLoader\n",
     "\n",
     "import matplotlib\n",
     "matplotlib.rcParams['font.family']   = 'serif'\n",
