change load and save path

--- a/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
@@ -62,8 +62,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_folder = \"Models/New_try\"\n",
-    "os.makedirs(save_folder, exist_ok=True)\n",
     "file_counter = 0\n",
     "train_clockwise = False"
    ]
@@ -81,10 +79,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_name = \"NN_202505141642(half-q)\"\n",
+    "dir_name = \"NN_full-q\"\n",
+    "#dir_name = \"NN_202505141642(half-q)\"\n",
     "\n",
     "dir_path = os.path.join(os.getcwd(), \"Models\", dir_name)\n",
-    "nn_filename = \"NN_202505141642\" + \"_0.pth\"\n",
+    "nn_filename = \"NN\" + \"_0.pth\"\n",
     "nn_filepath = os.path.join(dir_path, nn_filename)\n",
     "\n",
     "model_path = nn_filepath\n",
@@ -121,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "single_losses_path = \"Models/NN_202505221832/losses.pt\"\n",
+    "single_losses_path = \"Models/\" + dir_name + \"/losses.pt\"\n",
     "train_loss, val_loss = load_loss(single_losses_path)"
    ]
   },
