Add point creation for model performance plotting

--- a/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
@@ -130,7 +130,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lp.plot_loss(train_loss, val_loss, log = True, save_folder = save_folder)"
+    "lp.plot_loss(train_loss, val_loss, file_counter, log = True, save_folder = dir_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mask_points(q0_split, clockwise = False, q1_margin = 0.):\n",
+    "\n",
+    "\t\"\"\"\n",
+    "\tReturns a set of [q0, q1] points based on \"q0_split\" limits on q0 and q1.\n",
+    "\tThe limits on q1 depend on whether a clockwise or counterclockwise dataset is selected.\n",
+    "\t\"\"\"   \n",
+    "\n",
+    "\t# Retrieve training points\n",
+    "\tpoints = training_data.points.to(device)\n",
+    "\t\n",
+    "\t# Mask to retrieve only the counterclockwise points\n",
+    "\twidth_mask = (points[:,0] >= q0_split[0]) & (points[:,0] <= q0_split[1])\n",
+    "\tccw_mask = ((points[:,1] >= points[:,0] + q1_margin) & \n",
+    "\t\t\t\t  (points[:,1] <= points[:,0] + torch.pi - q1_margin))\n",
+    "\t\n",
+    "\t# Mask to retrieve only the clockwise points\n",
+    "\tcw_mask = ((points[:,1] >= points[:,0] - torch.pi + q1_margin) & (points[:,1] <= points[:,0] - q1_margin))\n",
+    "\n",
+    "\tif clockwise:\n",
+    "\t\tfinal_mask = width_mask & cw_mask\n",
+    "\telse:\n",
+    "\t\tfinal_mask = width_mask & ccw_mask\n",
+    "\t\n",
+    "\tpoints = points[final_mask]\n",
+    "\tpoints = points[0:6000]\n",
+    "\n",
+    "\tif points.size(0) < 6000:\n",
+    "\t\tprint(\"Warning: Only\", points.size(0), \"points in dataset.\")\n",
+    "\n",
+    "\treturn(points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_dataset(points):\n",
+    "\n",
+    "\t\"\"\"\n",
+    "\tCompute mass- and input matrix of all training points to reduce load in training.\n",
+    "\tReturns TensorDataset of (q, M_q, A_q). \n",
+    "\t\"\"\"\n",
+    "\n",
+    "\tdata_pairs = []\n",
+    "\tfor point in points:\n",
+    "\t\tMq_point, _, _ = dynamics.dynamical_matrices(rp, point, point)\n",
+    "\t\tAq_point = dynamics.input_matrix(rp, point)\n",
+    "\t\tdata_pairs.append((point, Mq_point, Aq_point))\n",
+    "\n",
+    "\tpoints_tensor = torch.stack([pair[0] for pair in data_pairs])           # Tensor of all points\n",
+    "\tmass_matrices_tensor = torch.stack([pair[1] for pair in data_pairs])   # Tensor of all mass matrices\n",
+    "\tinput_matrices_tensor = torch.stack([pair[2] for pair in data_pairs])  # Tensor of all input matrices\n",
+    "\n",
+    "\t# Create TensorDataset\n",
+    "\tdataset = TensorDataset(points_tensor, mass_matrices_tensor, input_matrices_tensor)\n",
+    "\treturn(dataset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_plot_dataloader(dataset, stride = 1):\n",
+    "\n",
+    "\t\"\"\"\n",
+    "\tTakes the training dataset and returns a dataloader of every 10th point\n",
+    "\tto reduce visual clutter. \n",
+    "\t\"\"\"\n",
+    "\n",
+    "\tpoints_tensor, mass_matrices_tensor, input_matrices_tensor = dataset.tensors\n",
+    "\t\n",
+    "\tplot_sampled = points_tensor[::stride]\n",
+    "\tmass_sampled = mass_matrices_tensor[::stride]\n",
+    "\tinput_sampled = input_matrices_tensor[::stride]\n",
+    "\n",
+    "\tplot_dataset = TensorDataset(plot_sampled, mass_sampled, input_sampled)\n",
+    "\tplot_dataloader = DataLoader(plot_dataset, batch_size=len(plot_dataset), shuffle=False, num_workers=0)\n",
+    "\n",
+    "\treturn(plot_dataloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q0_split = (-torch.pi, torch.pi)\n",
+    "q1_margin = 0.2\n",
+    "\n",
+    "plt.ion()\n",
+    "plot_points = mask_points(q0_split, clockwise = train_clockwise, q1_margin = q1_margin)\n",
+    "plot_dataset = make_dataset(plot_points)\n",
+    "plot_dataloader = make_plot_dataloader(plot_dataset, stride = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lp.plot_model_performance(model, model_ana, plot_dataloader, dir_path, device)"
    ]
   },
   {
