change save_folder to dir_path

--- a/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
@@ -289,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lp.plot_losses_vs_epoch(train_losses, val_losses, save_folder = save_folder)"
+    "lp.plot_losses_vs_epoch(train_losses, val_losses, save_folder = dir_path)"
    ]
   },
   {
@@ -308,7 +308,7 @@
     "# Define the number of grid points along each dimension.\n",
     "n_points = 200\n",
     "\n",
-    "lp.plot_yinyang(n_points, save_folder, file_counter, train_clockwise, models, model_names, rp, device) #TODO: Fill in"
+    "lp.plot_yinyang(n_points, q0_split, dir_path, file_counter, train_clockwise, models, model_names, rp, device) #TODO: Fill in"
    ]
   },
   {
