--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -42,7 +42,8 @@
     "plotter = pendulum_plot.Anim_plotter(rp)\n",
     "print(rp)\n",
     "\n",
-    "k_spring = [10., 10.]\n",
+    "k_spring = [4., 4.]\n",
+    "rest_angles = [0., torch.pi]\n",
     "\n",
     "model = autoencoders.Analytic_transformer(rp)\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -182,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = torch.tensor([[105., 105., 45., 10.]]).to(device)\n",
+    "K = torch.tensor([[45., 105., 45., 10.]]).to(device)\n",
     "if normal_form.check_stable_gains(K, verbose = False):\n",
     "\tprint(\"Gains are stable\")"
    ]
@@ -206,10 +207,9 @@
     "#xy_des_real = torch.tensor([1.9218631, -2.5156569]).requires_grad_().to(device)\n",
     "\n",
     "\n",
-    "xy_des_real = torch.tensor([1.5141, 1.855]).requires_grad_().to(device)\n",
+    "xy_des_real = torch.tensor([1.9, -0.4]).requires_grad_().to(device)\n",
     "\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
-    "\n",
     "q_des = transforms.inverse_kinematics(xy_des_real, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "is_clockwise_des = transforms.check_clockwise(q_des.squeeze(0))\n",
     "\n",
@@ -251,6 +251,7 @@
     "q_d_hat_des = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
     "#xy_des_est, _ = transforms.forward_kinematics(rp, q_hat_des[0])\n",
     "\n",
+    "\n",
     "M_q_des, C_q_des, G_q_des = dynamics.dynamical_matrices(rp, q_hat_des.squeeze(0), q_d_hat_des.squeeze(0))\n",
     "G_q_des = dynamics.add_spring_force_G_q(rp, q_hat_des, G_q_des, k_spring)\n",
     "A_q_des = dynamics.input_matrix(rp, q_des.squeeze(0))\n",
@@ -287,7 +288,7 @@
    "outputs": [],
    "source": [
     "#xy_start = torch.tensor([2, -1.9]).requires_grad_().to(device)\n",
-    "xy_start = xy_des_real * 1.05\n",
+    "xy_start = xy_des_real * 1.2\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
@@ -342,7 +343,10 @@
     "print(\"G_th start:\\n\", G_th_start)\n",
     "print(\"A_th start:\\n\", A_th_start)\n",
     "\n",
-    "print(\"Y_start:\", Y_start)"
+    "print(\"Y_start:\", Y_start)\n",
+    "\n",
+    "print(\"alpha_start:\", alpha_start.item())\n",
+    "print(\"beta_start:\", beta_start.item())"
    ]
   },
   {
