--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -45,8 +45,18 @@
     "k_spring = [4., 4.]\n",
     "rest_angles = [0., torch.pi]\n",
     "\n",
-    "model = autoencoders.Analytic_transformer(rp)\n",
+    "neural_net = True\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "if neural_net:\n",
+    "\tmodel = autoencoders.Autoencoder_double(rp).to(device)\n",
+    "\tmodel_location = '../Double_Pendulum/Learning/Models/NN_optimal/NN_0.pth'\n",
+    "\tmodel.load_state_dict(torch.load(model_location, weights_only=True))\n",
+    "else:\n",
+    "\tmodel_location = \"N/A\"\n",
+    "\tmodel = autoencoders.Analytic_transformer(rp)\n",
+    "\n",
+    "\n",
     "model_cw = False"
    ]
   },
@@ -220,8 +230,8 @@
     "#th_des = torch.tensor([[8.08,  1.3]]).requires_grad_().to(device)\n",
     "#th_d_des = torch.tensor([[0.,  0.]]).requires_grad_().to(device)\n",
     "\n",
-    "q_des_hat = transforms.analytic_inverse(rp, th_des.squeeze(0))[1]\n",
-    "xy_des_hat = transforms.forward_kinematics(rp, q_des_hat)[0]\n",
+    "q_des_hat = model.decoder_vmap(th_des, clockwise=is_clockwise_des)\n",
+    "xy_des_hat = transforms.forward_kinematics(rp, q_des_hat.squeeze(0))[0]\n",
     "\n",
     "\n",
     "print(\"xy_des:\", xy_des_real)\n",
