Add support for neutral angles of spring force

--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -263,7 +263,7 @@
     "\n",
     "\n",
     "M_q_des, C_q_des, G_q_des = dynamics.dynamical_matrices(rp, q_hat_des.squeeze(0), q_d_hat_des.squeeze(0))\n",
-    "G_q_des = dynamics.add_spring_force_G_q(rp, q_hat_des, G_q_des, k_spring)\n",
+    "G_q_des = dynamics.add_spring_force_G_q(rp, q_hat_des, G_q_des, k_spring, rest_angles)\n",
     "A_q_des = dynamics.input_matrix(rp, q_des.squeeze(0))\n",
     "\n",
     "M_th_des, C_th_des, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
@@ -333,7 +333,7 @@
     "q_d_hat_start = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
     "\n",
     "M_q_start, C_q_start, G_q_start = dynamics.dynamical_matrices(rp, q_hat_start.squeeze(0), q_d_hat_start.squeeze(0))\n",
-    "G_q_start = dynamics.add_spring_force_G_q(rp, q_hat_start, G_q_start, k_spring)\n",
+    "G_q_start = dynamics.add_spring_force_G_q(rp, q_hat_start, G_q_start, k_spring, rest_angles)\n",
     "A_q_start = dynamics.input_matrix(rp, q_hat_start.squeeze(0))\n",
     "\n",
     "M_th_start, C_th_start, G_th_start = transforms.transform_dynamical_from_inverse(M_q_start, C_q_start, G_q_start, th_start, th_d_start, J_h_inv_start, J_h_inv_trans_start)\n",
@@ -411,7 +411,7 @@
     "\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
     "\tM_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_hat.squeeze(0), q_d_hat.squeeze(0))\n",
-    "\tG_q_est = dynamics.add_spring_force_G_q(rp, q_hat, G_q_est, k_spring)\n",
+    "\tG_q_est = dynamics.add_spring_force_G_q(rp, q_hat, G_q_est, k_spring, rest_angles)\n",
     "\tA_q_est = dynamics.input_matrix(rp, q_hat.squeeze(0))\n",
     "\n",
     "\n",
@@ -566,7 +566,7 @@
     "\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
     "\tM_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
-    "\tG_q_est = dynamics.add_spring_force_G_q(rp, q, G_q_est, k_spring)\n",
+    "\tG_q_est = dynamics.add_spring_force_G_q(rp, q, G_q_est, k_spring, rest_angles)\n",
     "\tA_q_est = dynamics.input_matrix(rp, q.squeeze(0))\n",
     "\n",
     "\tM_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
@@ -600,7 +600,7 @@
     "\n",
     "\t\n",
     "\tM_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
-    "\tG_q_real = dynamics.add_spring_force_G_q(rp, q_real, G_q_real, k_spring)\n",
+    "\tG_q_real = dynamics.add_spring_force_G_q(rp, q_real, G_q_real, k_spring, rest_angles)\n",
     "\tA_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
     "\t\n",
     "\ttau_q_real = A_q_real * u\n",
@@ -1022,10 +1022,8 @@
     "\n",
     "\tM_q_des, C_q_des, G_q_des = dynamics.dynamical_matrices(rp, q_hat_des_plot.squeeze(0), q_d_hat_des_plot.squeeze(0))\n",
     "\tG_q_des = dynamics.add_spring_force_G_q(rp, q_hat_des_plot, G_q_des, k_spring)\n",
-    "\tG_th_des = J_h_inv_trans_des @ G_q_des\n",
-    "\t#_, _, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des_plot, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
-    "\tM_th_des = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
-    "\tM_th_des = M_th_des * th_des_plot/th_des_plot\t\n",
+    "\t\n",
+    "\tM_th_des, C_th_des, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des_plot, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
     "\t\n",
     "\t\n",
     "\tY_des = normal_form.calculate_Y(th_des_plot, th_d_des, M_th_des, G_th_des, device)\n",
@@ -1208,9 +1206,13 @@
     "\t\t\t\t\t\n",
     "\t\t\t\t\tk_spring_plot = [k0, k1]\n",
     "\t\t\t\t\tG_q_plot_spring = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot.clone(), k_spring_plot)\n",
-    "\t\t\t\t\tG_th_plot = J_h_inv_trans_plot @ G_q_plot_spring\n",
-    "\t\t\t\t\tM_th_plot = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
-    "\t\t\t\t\tM_th_plot = M_th_plot * th_plot/th_plot   \n",
+    "\n",
+    "\n",
+    "\t\t\t\t\tM_th_plot, C_th_plot, G_th_plot = transforms.transform_dynamical_from_inverse(M_q_plot, C_q_plot, G_q_plot_spring, th_plot,\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t  \t\t\tth_d_plot, J_h_inv_plot, J_h_inv_trans_plot) \n",
+    "\t\t\t\t\t#G_th_plot = J_h_inv_trans_plot @ G_q_plot_spring\n",
+    "\t\t\t\t\t#M_th_plot = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
+    "\t\t\t\t\t#M_th_plot = M_th_plot * th_plot/th_plot   \n",
     "\t\t\t\t\tA_th_plot = transforms.transform_input_matrix_from_inverse_trans(A_q_plot, J_h_inv_trans_plot)\n",
     "\n",
     "\t\t\t\t\tY_plot = normal_form.calculate_Y(th_plot, th_d_plot, M_th_plot, G_th_plot, device)\n",
@@ -1319,10 +1321,12 @@
     "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 15).unsqueeze(1).to(device)\n",
     "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 15).unsqueeze(1).to(device)\n",
     "\n",
-    "k_spring_plot = torch.tensor([10., 10.]).to(device)\n",
+    "print(k_spring_plot)\n",
+    "#print(rest_angles_plot)\n",
     "\n",
-    "#th_d_0_range = torch.tensor([[-2.], [0.], [2.]]).to(device)\n",
-    "#th_d_1_range = torch.tensor([[-0.1], [0.], [0.1]]).to(device)\n",
+    "rest_angle_0_range = torch.linspace(0., 0.1 * torch.pi, 1).unsqueeze(1).to(device)\n",
+    "rest_angle_1_range = torch.linspace(0., torch.pi, 10).unsqueeze(1).to(device)\n",
+    "print(rest_angle_0_range)\n",
     "\n",
     "th_d_0_range = torch.tensor([[0.]]).to(device)\n",
     "th_d_1_range = torch.tensor([[0.]]).to(device)\n",
@@ -1331,15 +1335,15 @@
     "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
     "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
     "\n",
-    "betas = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "betas = torch.ones(len(rest_angle_0_range), len(rest_angle_1_range),\n",
     "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
     "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
     "\n",
-    "insides = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "insides = torch.ones(len(rest_angle_0_range), len(rest_angle_1_range),\n",
     "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
     "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
     "\n",
-    "Y2s = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "Y2s = torch.ones(len(rest_angle_0_range), len(rest_angle_1_range),\n",
     "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
     "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
     " "
@@ -1356,8 +1360,8 @@
     "\n",
     "for k, th_0 in enumerate(th_0_range):\n",
     "\tfor l, th_1 in enumerate(th_1_range):\n",
-    "\t\tfor i, th_d_0 in enumerate(th_d_0_range):\n",
-    "\t\t\tfor j, th_d_1 in enumerate(th_d_1_range):\n",
+    "\t\tfor i, ra_0 in enumerate(rest_angle_0_range):\n",
+    "\t\t\tfor j, ra_1 in enumerate(rest_angle_1_range):\n",
     "\t\t\t\t\t\n",
     "\t\t\t\tth_d_plot = torch.tensor([th_d_0, th_d_1]).to(device).unsqueeze(0)\n",
     "\t\t\t\t\n",
@@ -1368,6 +1372,7 @@
     "\t\t\t\tq_plot = transforms.analytic_inverse(rp, torch.tensor([th_0, th_1]))[0]\n",
     "\t\t\t\tth_plot = torch.cat((th_0, th_1), dim=0).unsqueeze(0).requires_grad_()\n",
     "\t\t\t\t\n",
+    "\t\t\t\trest_angles_plot = torch.tensor([ra_0, ra_1]).to(device)\n",
     "\n",
     "\t\t\t\tq_hat_plot = model.decoder_vmap(th_plot, is_clockwise_plot)\n",
     "\t\t\t\tq_d_hat_plot = (model.jacobian_dec(th_plot, clockwise=is_clockwise_plot) @ th_d_plot.T).T\n",
@@ -1378,10 +1383,9 @@
     "\t\t\t\tM_q_plot, C_q_plot, G_q_plot = dynamics.dynamical_matrices(rp, q_hat_plot.squeeze(0), q_d_hat_plot.squeeze(0))\n",
     "\t\t\t\tA_q_plot = dynamics.input_matrix(rp, q_hat_plot.squeeze(0))\t\t\t\t\t\n",
     "\t\t\t\t\n",
-    "\t\t\t\tG_q_plot_spring = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot.clone(), k_spring_plot)\n",
-    "\t\t\t\tG_th_plot = J_h_inv_trans_plot @ G_q_plot_spring\n",
-    "\t\t\t\tM_th_plot = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
-    "\t\t\t\tM_th_plot = M_th_plot * th_plot/th_plot   \n",
+    "\t\t\t\tG_q_plot_spring = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot.clone(), k_spring_plot, rest_angles_plot)\n",
+    "\t\t\t\tM_th_plot, C_th_plot, G_th_plot = transforms.transform_dynamical_from_inverse(M_q_plot, C_q_plot, G_q_plot_spring, th_plot,\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t  \t\t\tth_d_plot, J_h_inv_plot, J_h_inv_trans_plot) \n",
     "\t\t\t\tA_th_plot = transforms.transform_input_matrix_from_inverse_trans(A_q_plot, J_h_inv_trans_plot)\n",
     "\n",
     "\t\t\t\tY_plot = normal_form.calculate_Y(th_plot, th_d_plot, M_th_plot, G_th_plot, device)\n",
@@ -1422,8 +1426,8 @@
     "\n",
     "\n",
     "\n",
-    "for i, th_d_0 in enumerate(th_d_0_range):\n",
-    "\tfor j, th_d_1 in enumerate(th_d_1_range):\n",
+    "for i, ra_0 in enumerate(rest_angle_0_range):\n",
+    "\tfor j, ra_1 in enumerate(rest_angle_1_range):\n",
     "\n",
     "\t\tfig, axes = plt.subplots(1, n, figsize=(4*n,4))\n",
     "\n",
@@ -1466,7 +1470,7 @@
     "\t\t\tcbar = fig.colorbar(sc, ax=ax)\n",
     "\n",
     "\t\t\t# labels & title\n",
-    "\t\t\tax.set_title(f\"{key}, thd0={round(th_d_0.item(), 3)}, thd1={round(th_d_1.item(), 3)}\")\n",
+    "\t\t\tax.set_title(f\"{key}, offset0={round(ra_0.item(), 3)}, offset1={round(ra_1.item(), 3)}\")\n",
     "\t\t\tax.set_xlabel(\"th0\")\n",
     "\t\t\tax.set_ylabel(\"th1\")\n",
     "\n",
